# prueba

./: CMakeLists.txt  algorithm_manager.cpp  algorithm_manager.h  compute_manager.cpp  compute_manager.h  config.cpp  config.h  input_handler.cpp  input_handler.h  main.cpp  writer.cpp  writer.h
